scss/includes/content.scss
#page {
	position: relative;
}

#content {
	@include site-width;
	padding-top: 20px;
}

.hentry {
	padding: 0 0 50px;
	border-bottom: 1px solid #d7d7d7;
	clear: both;
	margin: 0;
    @each $location in (home, archive, search) {
        .#{$location} & {
            padding-top: 50px;
        }
    }
    .single & {
        border: 0;
        padding: 0;
    }
    .entry-summary {
        p,
        .tiled-gallery {
            margin: 30px 0 0;
        }
        blockquote p,
        cite p,
        q p {
            margin:0;
            padding:0;
        }
    }
    .entry-content > h2:first-child,
    .entry-content > p:first-child {
        margin-top: 0;
    }
    .entry-content > p:first-child,
    .entry-content > p:first-of-type,
    .entry-content > p:first-child:empty + p,
    .entry-content > p:first-of-type:empty + p {
        font-weight: 600;
        color: #1d1d1d;
    }
}

.entry-header {
    .has-cover & {
        margin-top: 40px;
    }
    h1 {
        margin: 20px 0 0;
        a {
            position: relative;
            padding: 10px 0;
            color: $text-color-heading;
            &:hover {
                color: $link-color;
                border-color: transparent;
            }
        }
    }
    h2 {
        font: 600 20px $font-stack-content;
        color: #b6b6b6;
        margin: 0;
        a {
            color: #b6b6b6;
            &:hover {
                border-bottom: 2px solid #b6b6b6;
            }
        }
    }
    .span {
        color: #b6b6b6;
    }
}

.entry-summary {
	margin: 0;
}

.wp-caption {
	padding: 0;
	border: 0;
	position: relative;
    .aligncenter {
        margin: 0 auto 30px;
    }
    .alignleft,
    .alignright {
        max-width: 50%;
        margin: 0 0 20px;
        padding: 0;
    }
    .alignleft {
        padding-right: 2px;
    }
    .alignright {
        padding-left: 2px;
    }
    img[class*="wp-image-"] {
        max-width: 100%;
        margin: 0 auto;
        @include border-radius(4px);
    }
    .wp-caption-text {
        padding: 10px 0;
        font: 400 12px $font-stack-content;
        line-height: 24px;
        border-bottom: 1px solid #dcd8d5;
        text-align: left;
    }
}

@media screen and (min-width: 1140px) {
	.wp-caption.aligncenter .wp-caption-text,
	.wp-caption.alignleft .wp-caption-text,
	.wp-caption.alignright .wp-caption-text {
		padding: 0;
		position: absolute;
		top: 0;
		left: -175px;
		width: 150px;
		padding: 10px 0 10px;
		border-top: 1px solid #dcd8d5;
		margin: 0;
	}
	.wp-caption.aligncenter .wp-caption-text,
	.wp-caption.alignleft .wp-caption-text {
		text-align: right;
	}
	.wp-caption.alignright .wp-caption-text {
		left: auto;
		right: -175px;
	}
}

.entry-meta {
	margin-top: 20px;
}

.edit-link {
    margin-top: 15px;
}

.site-main [class*="navigation"] {
	padding: 50px 0;
}

